[gd_scene load_steps=3 format=3 uid="uid://d1qwqkleqi8sx"]

[ext_resource type="Script" path="res://Scripts/GridHud.gd" id="1_6pslo"]
[ext_resource type="Theme" uid="uid://boae5h5x4m1gb" path="res://Themes/buttons.tres" id="2_ixowc"]

[node name="GridHUD" type="CanvasLayer"]
script = ExtResource("1_6pslo")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 5000.0
offset_bottom = 100.0
color = Color(0.165657, 0.165656, 0.165656, 1)

[node name="PlayerHealth" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 5.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Health: "
horizontal_alignment = 1

[node name="PlayerMana" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -5.0
offset_right = 240.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Mana:"
horizontal_alignment = 1

[node name="PlayerBarrier" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 50.0
offset_right = 5.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Barrier:"
horizontal_alignment = 1

[node name="PlayerGold" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -5.0
offset_top = 50.0
offset_right = 240.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Gold:"
horizontal_alignment = 1

[node name="Inventory" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -210.0
offset_top = -100.0
offset_right = -10.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_ixowc")
text = "Inventory"

[node name="Shop" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -100.0
offset_right = 210.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_ixowc")
text = "Shop"

[node name="Character" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -210.0
offset_top = -190.0
offset_right = -10.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_ixowc")
text = "Character"

[node name="ExitFloor" type="Button" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -190.0
offset_right = 210.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_ixowc")
text = "Exit Floor"

[connection signal="pressed" from="Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="Character" to="." method="_on_character_pressed"]
[connection signal="pressed" from="ExitFloor" to="." method="_on_exit_floor_pressed"]
